# Symmetric-Encryption-via-CNN

./: .gitignore  README.md  main.py  pyproject.toml
audio_encrypter/: audio_encrypter.py  chaos.py  chaotic_audio_encryption.py  conversion.py  encryption.py  keygen.py  reader.py  shared.py  vctk_loader.py  verify.py  writer.py
chaotic_encrypter/: chaos.py  chaotic_audio_encryption.py  encryption.py  keygen.py
config/: dummy.env
test/: metrics.py  plotter.ipynb  plotter.py  test.py  timer.py  verify.py
test/metrics/: file_times.csv
