[tool.poetry]
name = "capstoneii"
version = "0.1.0"
description = ""
authors = ["pfenningpat <pat.pfenning@blastpoint.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
boto3 = ">=1.24.59,<1.24.60"
deeplake = "^3.6.3"
tensorflow = "^2.12.0"
flask = "^2.3.2"
jupyter = "^1.0.0"
pandas = "^2.0.2"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
